<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".controller.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/custom_background"
        android:layout_height="120dp">

        <ImageView
            android:layout_width="60dp"
            android:src="@drawable/icon_app_150"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_name_alias"
                android:textSize="23sp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/Version_Name"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/About"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@drawable/ic_info_black_24dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_height="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="#fff"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:layout_marginBottom="150dp"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp"
                >
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="160dp"/>

                <ImageView
                    android:id="@+id/img_Lottery_Results"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1.1"
                    android:src="@drawable/img_lottery_results" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1.1"
                    android:layout_marginStart="5dp"
                    android:id="@+id/img_Code_Lottery"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/img_code_lottery"
                    android:layout_height="160dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="160dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="160dp"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1.1"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/img_voice_lottery"
                    android:id="@+id/img_Voice_Lottery"
                    android:layout_height="160dp"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1.1"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/img_Image_Lottery"
                    android:src="@drawable/img_image_lottery"
                    android:layout_height="160dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="160dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:background="#fff"
            android:gravity="center_vertical"
            android:layout_height="150dp">


            <com.google.android.gms.ads.AdView
                android:id="@+id/adView_Home"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:adSize="LARGE_BANNER"
                android:layout_marginBottom="10dp"
                app:adUnitId="@string/Key_Banner">

            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </FrameLayout>





</LinearLayout>